# galois

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  index.html  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-doc.txt  requirements-lint.txt  requirements-min.txt  requirements-test.txt  setup.cfg  versions.json
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: build.yaml  build.yml  bump_version.yml  create_release.yml  docs.yaml  docs.yml  fast-forward-pr.yaml  fast-forward-pr.yml  lint.yaml  lint.yml  pull-request.yaml  pull-request.yml  release.yaml  release.yml  test.yaml  test.yml  validate_version.yml  version.yml
benchmarks/: test_fec.py  test_fft.py  test_field_arithmetic.py
dev/: objects.inv  searchindex.js  sitemap.xml
dev/.doctrees/: getting-started.doctree
dev/getting-started/: index.html
dev/py-modindex/: index.html
docs/: .gitignore  acknowledgements.md  api.rst  basic-usage-old.rst  basic-usage.rst  citation.md  conf.py  development.rst  example.ipynb  features.rst  getting-started.rst  index.rst  installation.rst  ipython_with_reprs.py  performance.rst  release-notes.md  requirements.txt  tutorials.rst  versioning.md
docs/_static/: extra.css  galois-overrides.js
docs/_templates/: base.html  class.rst  class_gf2.rst  class_only_init.rst  galois_module.rst  layout.html  module.rst  np_module.rst
docs/api/: fec.rst  galois-fields.rst  galois.Array.rst  galois.rst  integer-factorization.rst  linear-sequences.rst  number-theory.rst  numpy-examples.rst  numpy.rst  options.rst  polys.rst  primes.rst  transforms.rst  typing.rst
docs/basic-usage/: array-arithmetic.rst  array-classes.rst  array-creation.rst  compilation-modes.rst  element-representation.rst  field-element-representation.rst  galois-field-classes.rst  linear-algebra.rst  poly-arithmetic.rst  poly-creation.rst  poly.rst
docs/development/: documentation.rst  installation.rst  unit-tests.rst
docs/notebooks/: example.ipynb  performance.ipynb
docs/pages/: api.rst  basic_usage.rst  development.rst  fec.rst  galois.rst  installation.rst  integer_factorization.rst  (+8 more)
galois/: __init__.py  _array.py  _conway.py  _factor.py  _factory.py  _helper.py  _integer.py  _lfsr.py  _log.py  _math.py  _modular.py  _ntt.py  _options.py  _overrides.py  _poly_conversion.py  _polymorphic.py  _prime.py  _structure.py  _version.py  algorithm.py  array.py  array_meta.py  array_mixin_function.py  array_mixin_linalg.py  array_mixin_ufunc.py  array_p.py  conversion.py  conway.py  dtypes.py  example.py  factor.py  factory.py  gf.py  gf2.py  gf2m.py  gf_extension.py  gf_prime.py  gfp.py  integer.py  lfsr.py  (+25 more)
latest/: index.html  objects.inv  searchindex.js
logo/: README.md
np/: __init__.py  advanced.py  arithmetic.py  functions.py  linalg.py  linear_algebra.py
scripts/: create_conway_polys_database.py  create_irreducible_polys_database.py  create_prime_factors_database.py  create_primitive_polys_database.py  generate_fec_test_vectors.py  generate_field_test_vectors.py  generate_int_test_vectors.py  generate_pickle_galois_fields_test.py  generate_test_vectors.py  sparse_poly_performance_test.py
tests/: conftest.py  helper.py  sage_test_vectors.py  test_1.py  test_algorithms.py  test_berlekamp_massey.py  test_conway_polys.py  test_factor.py  test_fibonacci_lfsr.py  test_field_arithmetic.py  test_field_assignment.py  test_field_broadcasting.py  test_field_classes.py  test_field_conversion.py  test_field_instantiation.py  test_field_properties.py  test_field_ufuncs.py  test_fields.py  test_galois_lfsr.py  test_gf.py  test_gf2.py  test_log.py  test_math.py  test_modular.py  test_ntt.py  test_number_theory.py  test_options.py  test_poly_instantiation.py  test_polys.py  test_primes.py  test_primitive_elements.py  test_primitive_root.py  test_verify.py
v0.0.25/: .buildinfo  index.html  objects.inv  searchindex.js  sitemap.xml
v0.0.26/: .buildinfo  index.html  objects.inv  searchindex.js  sitemap.xml
v0.0.27/: index.html  objects.inv  searchindex.js  sitemap.xml
v0.0.28/: .buildinfo  index.html  objects.inv  searchindex.js  sitemap.xml
v0.0.29/: index.html  objects.inv  searchindex.js  sitemap.xml
v0.0.30/: .buildinfo  index.html  objects.inv  searchindex.js  sitemap.xml
v0.0.31/: index.html  objects.inv  searchindex.js  sitemap.xml
v0.0.32/: index.html  objects.inv  searchindex.js  sitemap.xml
v0.0.33/: .buildinfo  index.html  objects.inv  searchindex.js  sitemap.xml
v0.1.0/: index.html  objects.inv  searchindex.js  sitemap.xml
v0.1.1/: .buildinfo  index.html  objects.inv  searchindex.js  sitemap.xml
v0.1.2/: .buildinfo  index.html  objects.inv  searchindex.js  sitemap.xml
v0.2.0/: objects.inv  searchindex.js
v0.2.x/: .buildinfo  index.html  objects.inv  searchindex.js  sitemap.xml
v0.3.0/: objects.inv  searchindex.js  sitemap.xml
v0.3.1/: objects.inv  searchindex.js  sitemap.xml
v0.3.10/: searchindex.js  sitemap.xml
v0.3.2/: searchindex.js
v0.3.3/: .buildinfo  searchindex.js  sitemap.xml
v0.3.4/: index.html  objects.inv  searchindex.js
v0.3.5/: .buildinfo  objects.inv  searchindex.js
v0.3.6/: objects.inv  searchindex.js  sitemap.xml
v0.3.7/: searchindex.js
v0.3.8/: .buildinfo  objects.inv  searchindex.js
v0.3.9/: index.html  objects.inv  searchindex.js
v0.3.x/: .buildinfo  index.html  objects.inv  searchindex.js  sitemap.xml
v0.4.0/: index.html  objects.inv  searchindex.js
v0.4.1/: index.html  objects.inv  searchindex.js
v0.4.10/: index.html  objects.inv  searchindex.js
v0.4.2/: objects.inv  searchindex.js
v0.4.3/: .buildinfo  index.html  searchindex.js
v0.4.4/: index.html  objects.inv  searchindex.js
v0.4.5/: objects.inv  searchindex.js
v0.4.6/: objects.inv  searchindex.js
v0.4.7/: .buildinfo  index.html  searchindex.js
v0.4.8/: index.html  searchindex.js  sitemap.xml
v0.4.9/: index.html  objects.inv  searchindex.js
v0.4.x/: .buildinfo  index.html  objects.inv  searchindex.js  sitemap.xml
(+13501 files in other folders)
