[build-system]
requires = [
    "setuptools>=62",
    "wheel",
    "setuptools_scm[toml]>=6.2"
]

[project]
name = "galois"
authors = [
  {name = "Matt Hostetter", email = "matthostetter@gmail.com"},
]
description = "A performant NumPy extension for Galois fields and their applications"
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "galois field", "finite field", "numpy",
    "fec", "error correction", "bch", "reed solomon", "hamming", "golay",
    "encryption", "cryptography", "elliptic curves", "elliptic curve cryptography", "ecc", "aes", "rsa",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.7"
dependencies = [
    "numpy >= 1.18.4, < 1.24",  # v1.18.4 is needed for the new random
    "numba >= 0.53, < 0.57",  # v0.53 needed for function signautres of CPUDispatchers
    "typing_extensions >= 4.0.0",  # Needed for use of Self (Python 3.11+) and Literal (Python 3.8+)
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pylint>=2.14",
    "pytest",
    "pytest-cov[toml]",
    "pytest-xdist",
    # "pytest-benchmark",  # Remove until py dependency is fixed (https://github.com/ionelmc/pytest-benchmark/issues/226)
]

[project.urls]
Homepage = "https://github.com/mhostetter/galois"
Source = "https://github.com/mhostetter/galois"
Issues = "https://github.com/mhostetter/galois/issues"
Documentation = "https://mhostetter.github.io/galois/latest/"
Discuss = "https://github.com/mhostetter/galois/discussions"
Changelog = "https://mhostetter.github.io/galois/latest/release-notes/versioning/"
Twitter = "https://twitter.com/galois_py"

[tool.setuptools_scm]
write_to = "src/galois/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"galois._databases" = ["*.db"]

[tool.distutils.bdist_wheel]
universal = false

[tool.pylint]
disable = [
    "comparison-with-callable",  # pylint doesn't understand metaclass properties
    "consider-using-enumerate",
    "eval-used",
    "fixme",
    "global-statement",
    "invalid-name",
    "invalid-unary-operand-type",
    "line-too-long",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-else-return",
    "not-callable",  # pylint doesn't understand metaclass properties
    "protected-access",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "unnecessary-lambda-assignment",
    "unneeded-not",
    "unsubscriptable-object",  # pylint doesn't understand metaclass properties
]
min-similarity-lines = 100

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-vv --showlocals"
testpaths = [
    "tests"
]

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise RuntimeError",
]
