[metadata]
name = galois
version = file: version.txt
author = Matt Hostetter
author_email = matthostetter@gmail.com
home_page = https://galois.readthedocs.io/en/stable/
description = A performant numpy extension for Galois fields
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
include_package_data = true
keywords =
    galois, galois field, finite field, abstract algebra, number theory,
    numpy, numba, gpu, performant, encryption, cryptography, aes, rsa,
    GF(2), GF2, GF(2^8), GF(256), GF256
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = galois
test_suite = tests
python_requires = >=3.6
install_requires =
    numpy>=1.17.3  # v1.13 needed for __array_ufunc__ in np.ndarray, v1.17.3 is needed for wheels for Python 3.8
    numba>=0.49  # v0.38 needed for Python 3.8 support

[bdist_wheel]
universal = 0

[pylint]
disable =
    missing-module-docstring,
    missing-function-docstring,
    line-too-long,
    too-many-lines,
    bad-whitespace,
    invalid-name,
    no-else-return,
    fixme,
    too-many-arguments,
    too-many-locals,
    too-many-instance-attributes,
    consider-using-enumerate
min-similarity-lines = 30

[tool:pytest]
markers =
    GF2: Tests run in the GF2 field
    GFp: Tests run in all GF(p) fields
    GF5: Tests run in the GF(5) field
    GF7: Tests run in the GF(7) field
    GF31: Tests run in the GF(31) field
    GF3191: Tests run in the GF(3191) field
    GF2m: Tests run in all GF(2^m) fields
    GF4: Tests run in the GF(2^2) field
    GF8: Tests run in the GF(2^3) field
    GF256: Tests run in the GF(2^8) field
addopts = -vv
testpaths = tests
