[metadata]
name = galois
version = file: galois/version.txt
author = Matt Hostetter
author_email = matthostetter@gmail.com
url = https://github.com/mhostetter/galois
description = A performant NumPy extension for Galois fields and their applications
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords =
    galois, galois field, finite field, math, abstract algebra, number theory,
    numpy, numba, gpu, performant,
    encryption, cryptography, elliptic curves, elliptic curve cryptography, ecc, aes, rsa,
    GF(2), GF2, GF(2^8), GF(256), GF256
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/mhostetter/galois
    Issues = https://github.com/mhostetter/galois/issues
    Documentation = https://galois.readthedocs.io/en/stable/
    Discuss = https://github.com/mhostetter/galois/discussions
    Changelog = https://galois.readthedocs.io/en/stable/release-notes.html
    Twitter = https://twitter.com/galois_py

[options]
packages = galois, galois._codes, galois._databases, galois._fields
include_package_data = true
test_suite = tests
python_requires = >=3.6
install_requires =
    numpy >= 1.18.4, < 1.22  # v1.18.4 is needed for the new random, v1.21 has breaking changes to ufuncs
    numba >= 0.53, < 0.56  # v0.53 needed for function signautres of CPUDispatchers
    typing_extensions  # Needed for use of Literal in type hints for Python 3.6 and 3.7

[options.package_data]
galois = *.txt
galois._databases = *.db

[bdist_wheel]
universal = 0

[pylint]
disable =
    missing-module-docstring,
    missing-function-docstring,
    line-too-long,
    too-many-lines,
    bad-whitespace,
    invalid-name,
    no-else-return,
    fixme,
    too-many-arguments,
    too-many-locals,
    too-many-instance-attributes,
    too-many-ancestors,
    consider-using-enumerate,
    unneeded-not,
    global-statement,
    invalid-unary-operand-type,
    not-callable,  # pylint doesn't understand metaclass properties
    unsubscriptable-object,  # pylint doesn't understand metaclass properties
    comparison-with-callable,  # pylint doesn't understand metaclass properties
    eval-used,
    too-many-branches,
    protected-access
min-similarity-lines = 100

[tool:pytest]
# addopts = -v
testpaths = tests

[coverage:report]
exclude_lines =
    pragma: no cover
    raise AssertionError
    raise RuntimeError
    raise NotImplementedError
    ...
